--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,45 +1,51 @@
 html {
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-    height: 100%;
-  }
-  
-  *,
-  *::before,
-  *::after {
-    box-sizing: inherit;
-  }
-  
-  a {
-    text-decoration: none;
-  }
-  ul,
-  ol {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  body {
-    margin: 0;
-    background-color: #fff;
-    color: #575757;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    font-family: "Space Mono";
-    height: 100%;
-  }
-  
-  .font2 {
-    font-family: "Lexend Deca";
-  }
-  
-  .container {
-    max-width: 1150px;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  height: 100%;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+a {
+  text-decoration: none;
+}
+ul,
+ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+body {
+  margin: 0;
+  background-color: #fff;
+  color: #575757;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-family: "Public Sans", sans-serif;
+  height: 100%;
+  background: #edf3f8;
+}
+
+.font2 {
+  font-family: "DM Serif Display", serif;
+}
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 0;
+}
+.container {
+  max-width: 1150px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+}
