--- a/scss/block/_block.scss
+++ b/scss/block/_block.scss
@@ -1,3 +1,8 @@
 @import "./header";
 @import "./hero";
 @import "./footer";
+@import "./partners";
+@import "./implement";
+@import "./pricing";
+@import "./about";
+@import "./contact";
